--- a/phpBB3 Social Media Buttons/adm/style/acp_socialbuttons_body.html
+++ b/phpBB3 Social Media Buttons/adm/style/acp_socialbuttons_body.html
@@ -14,6 +14,15 @@
 		<dt><label for="cachetime">{L_ACP_CACHETIME}</label><br /><span>{L_ACP_CACHETIME_EXPLAIN}</span></dt>
 		<dd><input type="number" id="cachetime" name="cachetime" value="{CACHETIME}" /> <select id="multiplicator" name="multiplicator">{MULTIPLICATOR_OPTIONS}</select></dd>
 	</dl>
+	<dl>
+		<dt><label for="style">{L_ACP_STYLE}</label><br /><span>{L_ACP_STYLE_EXPLAIN}</span></dt>
+		<dd>
+			<div style="height:200px;overflow:auto;">
+			{BUTTON_STYLES}
+			</div>		
+		</dd>
+	</dl>
+
 </fieldset>
 
 <fieldset>
