Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@ or in german on <a href="https://www.phpbb.de/community/viewtopic.php?f=149&amp;
 <a href="https://tas2580.net/downloads/download-7.html">my Website</a>.</p>
 
 <h2>
+<a id="help-to-translate" class="anchor" href="#help-to-translate" aria-hidden="true"><span class="octicon octicon-link"></span></a>Help to translate</h2>
+
+<p>If you use the extension in your forum and translated it therefor in your language, it would be nice if you would send me a <a href="https://help.github.com/articles/using-pull-requests/">pull request</a>. Also it may be that existing translations after uptates of the extensions are incomplete. So you can help me if you complete or correct existing language files.</p>
+
+<h2>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>LICENSE</h2>
 
 <p><a href="http://opensource.org/licenses/gpl-2.0.php">GNU General Public License v2</a></p>
