Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ You can choose between 10 different styles for the buttons.</p>
 <a id="instalation" class="anchor" href="#instalation" aria-hidden="true"><span class="octicon octicon-link"></span></a>INSTALATION</h2>
 
 <p>To install this extension download it from here and upload the files in your forum under <b>/ext/tas2580/socialbuttons</b>.
-After that go to the Admin panel of your forum and navigate in to Customise -&gt; Extension Management -&gt; Extensions. Search
-this extension in the list of extensions and click on Enable.</p>
+After that go to the Admin panel of your forum and navigate in to Customise -&gt; Extension Management -&gt; Extensions. Search this extension in the list of extensions and click on Enable.
+After uploading make sure that <code>ext/tas2580/socialbuttons/cache/</code> is writable.</p>
 
 <h2>
 <a id="support" class="anchor" href="#support" aria-hidden="true"><span class="octicon octicon-link"></span></a>SUPPORT</h2>
