--- a/adm/style/acp_socialbuttons_body.html
+++ b/adm/style/acp_socialbuttons_body.html
@@ -69,7 +69,7 @@
 	<dl>
 		<dt><label for="og_image">{L_ACP_OG_IMAGE}</label><br /><span>{L_ACP_OG_IMAGE_EXPLAIN}</span></dt>
 		<dd>
-			<input type="text" name="og_image" id="og_image" value="{OG_IMAGE}" />
+			<input type="text" name="og_image" id="og_image" size="40" maxlength="255" value="{OG_IMAGE}" />
 		</dd>
 	</dl>	
 	<dl>
