--- a/adm/style/acp_socialbuttons_body.html
+++ b/adm/style/acp_socialbuttons_body.html
@@ -10,38 +10,38 @@
 <fieldset>
 	<legend>{L_ACP_SETTINGS}</legend>
 	<dl>
-		<dt><label for="use_seo_urls">{L_ACP_DISPLAY_ON_INDEX}</label><br /><span>{L_ACP_DISPLAY_ON_INDEX_EXPLAIN}</span></dt>
+		<dt><label for="use_seo_urls">{L_ACP_DISPLAY_ON_INDEX}{L_COLON}</label><br /><span>{L_ACP_DISPLAY_ON_INDEX_EXPLAIN}</span></dt>
 		<dd>
 			<label><input type="radio" class="radio" id="display_on_index" name="display_on_index" value="1"<!-- IF S_DISPLAY_ON_INDEX --> checked="checked"<!-- ENDIF --> /> {L_YES}</label>
 			<label><input type="radio" class="radio" name="display_on_index" value="0"<!-- IF not S_DISPLAY_ON_INDEX --> checked="checked"<!-- ENDIF --> /> {L_NO}</label>
 		</dd>
 	</dl>
 	<dl>
-		<dt><label for="position">{L_ACP_POSITION}</label><br /><span>{L_ACP_POSITION_EXPLAIN}</span></dt>
+		<dt><label for="position">{L_ACP_POSITION}{L_COLON}</label><br /><span>{L_ACP_POSITION_EXPLAIN}</span></dt>
 		<dd><select id="position" name="position">{POSITION_OPTIONS}</select></dd>
 	</dl>
 	<dl>
-		<dt><label for="forum">{L_ACP_ENABLE_FORUMS}</label><br /><span>{L_ACP_ENABLE_FORUMS_EXPLAIN}</span></dt>
+		<dt><label for="forum">{L_ACP_ENABLE_FORUMS}{L_COLON}</label><br /><span>{L_ACP_ENABLE_FORUMS_EXPLAIN}</span></dt>
 		<dd><select id="forum" name="enable_f[]" multiple="multiple" size="10">{FORUM_ENABLE_SELECT}</select></dd>
 		<dd><label><input type="checkbox" class="radio" name="enable" value="1"<!-- IF S_ENABLE --> checked="checked"<!-- ENDIF--> /> {L_ALL_FORUMS}</label></dd>
 	</dl>
 	<dl>
-		<dt><label for="showshares">{L_ACP_SHOWSHARES}</label><br /><span>{L_ACP_SHOWSHARES_EXPLAIN}</span></dt>
+		<dt><label for="showshares">{L_ACP_SHOWSHARES}{L_COLON}</label><br /><span>{L_ACP_SHOWSHARES_EXPLAIN}</span></dt>
 		<dd>
 			<label><input type="radio" class="radio" id="showshares" name="showshares" value="1"<!-- IF S_SHOWSHARES --> checked="checked"<!-- ENDIF --> /> {L_YES}</label>
 			<label><input type="radio" class="radio" name="showshares" value="0"<!-- IF not S_SHOWSHARES --> checked="checked"<!-- ENDIF --> /> {L_NO}</label>
 		</dd>
 	</dl>
 	<dl>
-		<dt><label for="cachetime">{L_ACP_CACHETIME}</label><br /><span>{L_ACP_CACHETIME_EXPLAIN}</span></dt>
+		<dt><label for="cachetime">{L_ACP_CACHETIME}{L_COLON}</label><br /><span>{L_ACP_CACHETIME_EXPLAIN}</span></dt>
 		<dd><input type="number" id="cachetime" name="cachetime" value="{CACHETIME}" /> <select id="multiplicator" name="multiplicator">{MULTIPLICATOR_OPTIONS}</select></dd>
 	</dl>
 	<dl>
-		<dt><label for="action_purge_cache">{L_ACP_PURGE_CACHE}</label><br /><span>{L_ACP_PURGE_CACHE_EXPLAIN}</span></dt>
+		<dt><label for="action_purge_cache">{L_ACP_PURGE_CACHE}{L_COLON}</label><br /><span>{L_ACP_PURGE_CACHE_EXPLAIN}</span></dt>
 		<dd><label><input class="button2" type="submit" id="action_purge_cache" name="action_purge_cache" value="{L_RUN_NOW}" /></dd>
 	</dl>
 	<dl>
-		<dt><label for="style">{L_ACP_STYLE}</label><br /><span>{L_ACP_STYLE_EXPLAIN}</span></dt>
+		<dt><label for="style">{L_ACP_STYLE}{L_COLON}</label><br /><span>{L_ACP_STYLE_EXPLAIN}</span></dt>
 		<dd>
 			<div style="height:200px;overflow:auto;">
 			{BUTTON_STYLES}
@@ -49,7 +49,7 @@
 		</dd>
 	</dl>
 	<dl>
-		<dt><label for="use_seo_urls">{L_ACP_USE_SEO_URLS}</label><br /><span>{L_ACP_USE_SEO_URLS_EXPLAIN}</span></dt>
+		<dt><label for="use_seo_urls">{L_ACP_USE_SEO_URLS}{L_COLON}</label><br /><span>{L_ACP_USE_SEO_URLS_EXPLAIN}</span></dt>
 		<dd>
 			<label><input type="radio" class="radio" id="use_seo_urls" name="use_seo_urls" value="1"<!-- IF S_USE_SEO_URLS --> checked="checked"<!-- ENDIF --> /> {L_YES}</label>
 			<label><input type="radio" class="radio" name="use_seo_urls" value="0"<!-- IF not S_USE_SEO_URLS --> checked="checked"<!-- ENDIF --> /> {L_NO}</label>
@@ -60,27 +60,27 @@
 <fieldset>
 	<legend>{L_ACP_OG_TAGS}</legend>
 	<dl>
-		<dt><label for="enable_og">{L_ACP_ENABLE_OG_TAGS}</label><br /><span>{L_ACP_OG_EXPLAIN}</span></dt>
+		<dt><label for="enable_og">{L_ACP_ENABLE_OG_TAGS}{L_COLON}</label><br /><span>{L_ACP_OG_EXPLAIN}</span></dt>
 		<dd>
 			<label><input type="radio" class="radio" id="enable_og" name="enable_og" value="1"<!-- IF S_ENABLE_OG --> checked="checked"<!-- ENDIF --> /> {L_YES}</label>
 			<label><input type="radio" class="radio" name="enable_og" value="0"<!-- IF not S_ENABLE_OG --> checked="checked"<!-- ENDIF --> /> {L_NO}</label>
 		</dd>
 	</dl>
 	<dl>
-		<dt><label for="og_image">{L_ACP_OG_IMAGE}</label><br /><span>{L_ACP_OG_IMAGE_EXPLAIN}</span></dt>
+		<dt><label for="og_image">{L_ACP_OG_IMAGE}{L_COLON}</label><br /><span>{L_ACP_OG_IMAGE_EXPLAIN}</span></dt>
 		<dd>
 			<input type="text" name="og_image" id="og_image" size="40" maxlength="255" value="{OG_IMAGE}" />
 		</dd>
 	</dl>
 	<dl>
-		<dt><label for="enable_og_title">{L_ACP_ENABLE_OG_TITLE}</label><br /><span>{L_ACP_OG_TITLE_EXPLAIN}</span></dt>
+		<dt><label for="enable_og_title">{L_ACP_ENABLE_OG_TITLE}{L_COLON}</label><br /><span>{L_ACP_OG_TITLE_EXPLAIN}</span></dt>
 		<dd>
 			<label><input type="radio" class="radio" id="enable_og_title" name="enable_og_title" value="1"<!-- IF S_ENABLE_OG_TITLE --> checked="checked"<!-- ENDIF --> /> {L_YES}</label>
 			<label><input type="radio" class="radio" name="enable_og_title" value="0"<!-- IF not S_ENABLE_OG_TITLE --> checked="checked"<!-- ENDIF --> /> {L_NO}</label>
 		</dd>
 	</dl>
 	<dl>
-		<dt><label for="forum">{L_ACP_ENABLE_OG_DESC}</label><br /><span>{L_ACP_OG_DESC_EXPLAIN}</span></dt>
+		<dt><label for="forum">{L_ACP_ENABLE_OG_DESC}{L_COLON}</label><br /><span>{L_ACP_OG_DESC_EXPLAIN}</span></dt>
 		<dd><select id="forum" name="enable_og_desc_f[]" multiple="multiple" size="10">{FORUM_DESC_SELECT}</select></dd>
 		<dd><label><input type="checkbox" class="radio" name="enable_og_desc" value="1"<!-- IF S_ENABLE_OG_DESC --> checked="checked"<!-- ENDIF--> /> {L_ALL_FORUMS}</label></dd>
 	</dl>
@@ -90,28 +90,28 @@
 <fieldset>
 	<legend>{L_ACP_SET_PLATFORMS}</legend>
 	<dl>
-		<dt><label for="facebook">{L_ACP_FACEBOOK}</label></dt>
+		<dt><label for="facebook">{L_ACP_FACEBOOK}{L_COLON}</label></dt>
 		<dd>
 			<label><input type="radio" class="radio" id="facebook" name="facebook" value="1"<!-- IF S_FACEBOOK --> checked="checked"<!-- ENDIF --> /> {L_YES}</label>
 			<label><input type="radio" class="radio" name="facebook" value="0"<!-- IF not S_FACEBOOK --> checked="checked"<!-- ENDIF --> /> {L_NO}</label>
 		</dd>
 	</dl>
 	<dl>
-		<dt><label for="twitter">{L_ACP_TWITTER}</label></dt>
+		<dt><label for="twitter">{L_ACP_TWITTER}{L_COLON}</label></dt>
 		<dd>
 			<label><input type="radio" class="radio" id="twitter" name="twitter" value="1"<!-- IF S_TWITTER --> checked="checked"<!-- ENDIF --> /> {L_YES}</label>
 			<label><input type="radio" class="radio" name="twitter" value="0"<!-- IF not S_TWITTER --> checked="checked"<!-- ENDIF --> /> {L_NO}</label>
 		</dd>
 	</dl>
 	<dl>
-		<dt><label for="google">{L_ACP_GOOGLE}</label></dt>
+		<dt><label for="google">{L_ACP_GOOGLE}{L_COLON}</label></dt>
 		<dd>
 			<label><input type="radio" class="radio" id="google" name="google" value="1"<!-- IF S_GOOGLE --> checked="checked"<!-- ENDIF --> /> {L_YES}</label>
 			<label><input type="radio" class="radio" name="google" value="0"<!-- IF not S_GOOGLE --> checked="checked"<!-- ENDIF --> /> {L_NO}</label>
 		</dd>
 	</dl>
 	<dl>
-		<dt><label for="linkedin">{L_ACP_LINKEDIN}</label></dt>
+		<dt><label for="linkedin">{L_ACP_LINKEDIN}{L_COLON}</label></dt>
 		<dd>
 			<label><input type="radio" class="radio" id="linkedin" name="linkedin" value="1"<!-- IF S_LINKEDIN --> checked="checked"<!-- ENDIF --> /> {L_YES}</label>
 			<label><input type="radio" class="radio" name="linkedin" value="0"<!-- IF not S_LINKEDIN --> checked="checked"<!-- ENDIF --> /> {L_NO}</label>
