--- a/adm/style/acp_socialbuttons_body.html
+++ b/adm/style/acp_socialbuttons_body.html
@@ -10,7 +10,7 @@
 <fieldset>
 	<legend>{L_ACP_SETTINGS}</legend>
 	<dl>
-		<dt><label for="use_seo_urls">{L_ACP_DISPLAY_ON_INDEX}{L_COLON}</label><br /><span>{L_ACP_DISPLAY_ON_INDEX_EXPLAIN}</span></dt>
+		<dt><label for="display_on_index">{L_ACP_DISPLAY_ON_INDEX}{L_COLON}</label><br /><span>{L_ACP_DISPLAY_ON_INDEX_EXPLAIN}</span></dt>
 		<dd>
 			<label><input type="radio" class="radio" id="display_on_index" name="display_on_index" value="1"<!-- IF S_DISPLAY_ON_INDEX --> checked="checked"<!-- ENDIF --> /> {L_YES}</label>
 			<label><input type="radio" class="radio" name="display_on_index" value="0"<!-- IF not S_DISPLAY_ON_INDEX --> checked="checked"<!-- ENDIF --> /> {L_NO}</label>
